# IoT_Greengrass_Realm_GenAI_framework

./: .gitignore  README.md  description
1-atlas/: README.md
1-atlas/app-services/: realm_config.json
1-atlas/app-services/auth/: providers.json
1-atlas/app-services/functions/: config.json  exportToS3.js  retrieveApiGatewayApiKey.js
1. atlas/: README.md
2-edge/: README.md
2-edge/1-docker/: README.md
2-edge/2-edge/cpp/producer/: CMakeLists.txt  README.md
2. edge/: README.md
3-aws-greengrass-telemetry/: README.md
3. aws-greengrass-telemetry/: README.md
4-aws-sagemaker/predictive-maintenance/: README.md  lambda_function.py
4. aws-sagemaker/predictive-maintenance/: AWSIoTVehicleFailurePredict.yaml
5-aws-bedrock/: README.md
5-aws-bedrock/1. generate-embeddings/: generate_embeddings.py
5-aws-bedrock/2-lambda/: AVSChatEndpoint.yaml
6-mobile/: .gitignore  README.md  index.js  package.json  sync.config.js
6-mobile/android/: settings.gradle
6-mobile/app/: app.tsx  authApp.tsx
6-mobile/ios/: Podfile
6. mobile/: app.json
6. mobile/ios/: Podfile
7-web/: README.md
7-web/fleet-ui/: package.json
atlas/: README.md
atlas/dump/: GGIotDeviceHealth.bson  GGIotDeviceHealth.metadata.json  Job.bson  Job.metadata.json  Part.bson  Part.metadata.json  PartHealth.bson  PartHealth.metadata.json  SensorData.bson  SensorData.metadata.json  User.bson  User.metadata.json  Vehicle.bson  Vehicle.metadata.json  docs_mdb.bson  docs_mdb.metadata.json
aws/: README.md
aws/bedrock/: README.md  generate_embeddings.py
aws/telemetry/: README.md
docker/: README.md
docker/greengrass/: README.md
docker/vehicle1/: README.md
docker/vehicle2/: README.md
edge/cpp/consumer/: CMakeLists.txt  README.md  consumer.cpp
infrastructure/: README.md
infrastructure/greengrass/: Dockerfile  README.md  docker-compose.yml
infrastructure/vehicle1/: README.md
infrastructure/vehicle2/: Dockerfile  README.md
mobile/: README.md
web/fleet-ui/: README.md
(+121 files in other folders)
